--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ rvm:
   - ruby-head
 before_install:
  - sudo apt-get update
- - sudo apt-get install librrd
+ - sudo apt-get install librrd-dev libsqlite3-dev
